# agents

./: .env.example  .geminiignore  .gitignore  1.6.0  GEMINI.md  README.md  STRUCTURAL_IMPROVEMENTS.md  pyproject.toml  verify_actor_framework.py
docs/: actor-framework.md  actor_framework_integration.md  architecture.md  mvp-plan.md  project-structure.md
examples/: actor_example.py
prompts/: agent.md  default.md  subagent.md
src/: main.py
src/actors/: __init__.py  base.py  message.py  refactoring_notes.md  system.py
src/actors/actors/: __init__.py  command_actor.py  content_analyzer_actor.py  page_loader_actor.py  page_summarizer_actor.py  web_search_actor.py
src/agents/: __init__.py  actor_agent.py  base.py  context_agent.py  main_agent.py  safety_agent.py  sub_agent.py
src/context/: manager.py  tokenizer.py
src/executor/: command.py  web_search.py
src/llm/: factory.py
src/llm/providers/: base.py  gemini_cli.py  openai.py  openrouter.py
src/session/: manager.py  models.py
src/storage/: file_lock.py  json_store.py
src/telegram/: bot.py
src/utils/: config.py  formatting.py  logging.py  prompts.py
tests/: test_formatting.py
tests/test_actors/: test_actor_system.py  test_command_actor.py
tests/test_agents/: test_sub_agent.py
