[project]
name = "agents"
version = "0.1.0"
description = "MVP Agent System with Telegram Interface"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Developer", email = "dev@example.com"}
]

dependencies = [
    "aiogram>=3.4.0",
    "aiofiles>=23.2.1",
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    "aiohttp>=3.9.0",
    "tiktoken>=0.5.2",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "structlog>=24.1.0",
    "loguru>=0.7.2",
    "httpx>=0.26.0",
    "uvicorn>=0.27.0",
    "python-telegram-bot>=20.7",
    "filelock>=3.13.0",
    "duckduckgo-search>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "black>=23.12.0",
    "types-aiofiles>=23.2.1",
    "types-python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "W", "F", "I", "B", "C4", "ASYNC"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.hatch.build.targets.wheel]
packages = ["src"] 
